crates/omnifs-inspector/src/snapshots/omnifs_inspector__ui__tests__inspector_filter_pause_help.snap
---
source: crates/omnifs-inspector/src/ui.rs
expression: filtered_screen
---
┌ inspect · activity · replay fixture 1× · paused +0 · errors-only · 25.0/s · drop 0 ──────────────┐
│                                                                                                  │
└ q quit  ? help  v view  tab focus  ↑/↓ navigate  ↵ collapse  space pause  e errors  l latency  y ┘
┌ mounts ───────────────┌ keys · ?/esc close ──────────────────────────────┐───────────────────────┐
│  linear      █▁▁▁▁▁▁▁▁│q        quit                                     │ms                     │
│  github      █▁▁▁▁▁▁▁▁│?        help                                     │s                      │
└───────────────────────│v        view                                     │───────────────────────┘
┌ recent paths ─────────│tab      focus                                    │ (2 / 4096) ───────────┐
│  ▣ linear  1 failed pa│↑/↓      navigate                                 │r read …/ENG-42  220.0m│
│    ▣ issues  1 failed │↵        collapse                                 │                       │
│      ✗ ENG-42  220.0ms│j/n      next op                                  │                       │
│  ▣ github             │k/p      prev op                                  │                       │
│    ▣ repos            │space    pause                                    │                       │
│      ▣ omnifs  40.0ms │e        errors                                   │                       │
│                       │E        next error                               │                       │
│                       │l        latency                                  │                       │
│                       │y        copy path                                │                       │
│                       │i        idle                                     │                       │
│                       │/        filter                                   │                       │
└───────────────────────│r        reset                                    │───────────────────────┘
┌ linear · read /issues/│←/→      step                                     │───────────────────────┐
│  · fuse.read          │g        live                                     │        220.0ms network│
│  ▸ read_file          │[        slower                                   │        150.0ms network│
│  network  220.0ms     │]        faster                                   │                       │
│                       └──────────────────────────────────────────────────┘                       │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
